# genpdfi-extended

./: .gitignore  CHANGELOG.md  Cargo.toml  LATEX_FEATURE_SUMMARY.md  QUICK_START_LATEX.md  README.md  build.rs  cobertura.xml
.github/workflows/: ci.yml
coverage/: cobertura.xml
docs/: LATEX_ARCHITECTURE.md  LATEX_FEATURE.md  LATEX_QUICK_REFERENCE.md  MERMAID_POOL_ARCHITECTURE.md  MICROTEX_SINGLETON_FIX.md
examples/: LATEX_EXAMPLES.md  README.md  README_LATEX.md  basic_and_structural.rs  image_positions.rs  image_resizing_height.rs  image_resizing_width.rs  latex_advanced.rs  latex_formulas.rs  latex_integration.rs  latex_render_each_clone.rs  latex_stress_test.rs  mermaid_auto_scale.rs  mermaid_pool_proof_of_concept.rs  mermaid_proof_of_concept.rs  mermaid_stress_test.rs  pdf_with_image_links.rs  pdf_with_text_links.rs  svg_parser_tests.rs  svg_rendering.rs  table_builtin.rs  table_embedded.rs  test_subsetting.rs  test_subsetting_comprehensive.rs
examples/helper/: index.html  mermaid.min.js
examples/mermaid_pool/: README.md  package.json
examples/mermaid_pool/src/: main.ts  pool.ts  styles.css
mermaid_pool/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mermaid_pool/src/: main.ts  pool.test.ts  pool.ts
src/: elements.rs  error.rs  fonts.rs  lib.rs  render.rs  style.rs  subsetting.rs  wrap.rs
src/elements/: images.rs  latex.rs  mermaid.rs
tests/: bin_integration.rs  document_clone_integration.rs  image_link_features.rs  inspect_diffs.rs  integration_pdf.rs  latex_render_each.rs  mermaid_pipe_hang.rs  mermaid_render_each.rs  pdf_link_inspector.rs  pie_svg_class_tests.rs  text_serialization.rs
tests/scripts/: requirements.txt  validate_pdf.py
