[package]
name = "genpdfi_extended"
version = "0.3.0"
authors = ["Robin Krahl <robin.krahl@ireas.org>", "Ismael Sh <me@theiskaa.com>"]
edition = "2018"
description = "User-friendly PDF generator written in pure Rust"
homepage = "https://github.com/theiskaa/genpdfi"
repository = "https://github.com/theiskaa/genpdfi"
keywords = ["pdf", "text", "layout"]
categories = ["text-processing"]
license = "Apache-2.0 OR MIT"
exclude = [".builds/*"]
readme = "README.md"

[dependencies]
lopdf = "0.38.0"
rusttype = "0.9.3"
subsetter = "0.2.3"
ttf-parser = "0.25.1"
clap = { version = "4.5.53", features = ["derive"] }
pdfium-render = { version = "0.8.37", features = ["static"] }

[dependencies.image]
version = "0.25.9"
default-features = false
optional = true

[dependencies.hyphenation]
version = "0.8"
optional = true

[dependencies.printpdf]
version = "0.8.2"
default-features = false

[dependencies.derive_more]
version = "2.1.1"
default-features = false
features = ["add", "add_assign", "from", "into", "mul", "mul_assign", "sum"]

[dev-dependencies]
float-cmp = { version = "0.10.0", default-features = false, features = ["std"] }
hyphenation = { version = "0.8", features = ["embed_en-us"] }
tempfile = "3"

[features]
default = []
images = [
    "image",
    "printpdf/gif",
    "printpdf/jpeg",
    "printpdf/png",
    "image/webp",
    "image/bmp",
    "image/tiff",
]

[package.metadata.docs.rs]
all-features = true
