# Copyright (c) 2025 Ismael Theiskaa
# Copyright (c) 2026 Ronan Le Meillat - SCTG Development
# 
# SPDX-License-Identifier: MIT OR Apache-2.0
# Licensed under the MIT License or the Apache License, Version 2.0

[workspace]
members = ["."]

[package]
name = "genpdfi_extended"
version = "0.7.0"
authors = [
    "Robin Krahl <robin.krahl@ireas.org>",
    "Ismael Sh <me@theiskaa.com>",
    "Ronan Le Meillat",
]
edition = "2021"
description = "User-friendly PDF generator written in pure Rust"
homepage = "https://github.com/sctg-development/genpdfi-extended"
repository = "https://github.com/sctg-development/genpdfi-extended"
keywords = ["pdf", "text", "layout"]
categories = ["text-processing"]
license = "Apache-2.0 OR MIT"
exclude = [".builds/*"]
readme = "README.md"

[dependencies]
lopdf = "0.39.0"
once_cell = "1.20.0"
rusttype = "0.9.3"
subsetter = "0.2.3"
ttf-parser = "0.25.1"
clap = { version = "4.5.56", features = ["derive"] }
flate2 = "1.1.8"
serde_json = "1.0"

[dependencies.image]
version = "0.25.9"
default-features = false
optional = true

[dependencies.hyphenation]
version = "0.8"
optional = true

[dependencies.microtex_rs]
git = "https://github.com/sctg-development/microtex_rs"
branch = "main"
# path = "./microtex_rs"
optional = true

[dependencies.printpdf]
version = "0.9.0"
features = ["html", "gif", "jpeg", "png", "webp", "svg"]

[dependencies.derive_more]
version = "2.1.1"
default-features = false
features = ["add", "add_assign", "from", "into", "mul", "mul_assign", "sum"]

[dependencies.sysinfo]
version = "0.38.0"
optional = true

[dev-dependencies]
microtex_rs = { git = "https://github.com/sctg-development/microtex_rs", branch = "main" }
# microtex_rs = { path = "./microtex_rs" }
float-cmp = { version = "0.10.0", default-features = false, features = ["std"] }
hyphenation = { version = "0.8", features = ["embed_en-us"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3.1.3"

[dependencies.escape_string]
version = "0.1.2"
optional = true

[dependencies.headless_chrome]
version = "1.0.20"
git = "https://github.com/sctg-development/rust-headless-chrome"
branch = "pipe-patch"
optional = true
features = ["fetch"]

[dependencies.unescape]
optional = true
version = "0.1.0"

[features]
default = ["images"]
images = [
    "image",
    "printpdf/gif",
    "printpdf/jpeg",
    "printpdf/png",
    "image/webp",
    "image/bmp",
    "image/tiff",
]
latex = ["microtex_rs"]
mermaid = ["headless_chrome", "escape_string", "unescape", "images", "sysinfo"]


[package.metadata.docs.rs]
all-features = true
